Add Keycloak, add DockerSource, add RestController
(cherry picked from commit fae313a3015fe1bb2fe1bc0a31cae791505c7589)